<resources>
    <string name="app_name">Coleta pra Mim!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_coletor">Coletar</string>
    <string name="lbl_doador">Doar</string>
    <string name="lbl_ou">Você quer </string>
    <string name="lbl_Face">Cadastro com Facebook</string>
    <string name="lbl_pedir">Solicitar carroceiro</string>
    <string name="ldl_confirme">Confirme a localização da coleta</string>
    <string name="lbl_busc.carroca">Buscando carroceiro</string>
    <string name="lbl_busPedido">Buscando pedido</string>
    <string name="btnOk">Ok</string>
    <string name="btnRecusar">Recusar</string>
    <string name="btnAceitar">Aceitar</string>
    <string name="txt_d.doador">Dados do Doador:</string>
    <string name="btnColetaEfetudada">Coleta efetuada</string>
    <string name="txtAcaminho">Estou a caminho!</string>
    <string name="txt_d.coletor">Avalie o Coletor:</string>

    <string name="lbl_nome">nome:</string>
    <string name="lbl_telefone">telefone:</string>
    <string name="txt_nomedoador">nome do doador</string>
    <string name="txt_telefonedodoador">telefone do doador</string>
    <string name="txt_nomecoletor">nome do coletor</string>
    <string name="txt_telefonedocoletor">telefone do coletor</string>


    <string name="facebook_app_id">937996049570811</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_enviar_chamado">EnviarChamado</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lbl_loading">Buscando pedido</string>
    <string name="btnDesistir">Desistir</string>
    <string name="action_exit">Sair</string>
    <string name="txt_coletor">Coletor escolhido:</string>
    <string name="txt_doador_avalie">Avalie o Doador:</string>

    <string name="action_dados">Dados</string>
    <string name="txt_dispositivos">Dispositivos Vinculados</string>
    <string name="btn_dispositivos">Dispositivos Vinculados</string>
    <string name="txt_temperatura">Temperatura:</string>
    <string name="lbl_temperatura" />
    <string name="txt_luminosidade">Luminosidade</string>
    <string name="lbl_luminosidade" />
    <string name="txt_indiceUV">Índice UV:</string>
    <string name="lbl_indiceUV" />
    <string name="txt_qualidadedoAr">Qualidade do ar:</string>
    <string name="lbl_qualidadedoAr" />
    <string name="btn_Conectar">Conectar Bluetooth</string>
    <string name="txt_dados">DADOS</string>


</resources>
