<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Layout.ActAceitar"
    android:id="@+id/imFotododoador">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_d.doador"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/map2"
        android:layout_alignEnd="@+id/map2"
        android:layout_above="@+id/map2"
        android:layout_toEndOf="@+id/telefone_doador"
        android:layout_toRightOf="@+id/telefone_doador" />



    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txttelefone" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_nome"
        android:id="@+id/txtnome"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nomedoador"
        android:id="@+id/nome_doador"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/txtnome"
        android:layout_toEndOf="@+id/txtnome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_telefone"
        android:id="@+id/txttelefone"
        android:layout_below="@+id/txtnome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_telefonedodoador"
        android:id="@+id/telefone_doador"
        android:layout_below="@+id/nome_doador"
        android:layout_toRightOf="@+id/txttelefone"
        android:layout_toEndOf="@+id/txttelefone" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnColetaEfetudada"
        android:id="@+id/btnColetaEfetuada"
        android:layout_alignBottom="@+id/map2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>