<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.v3.nrd.nrdv3.ActPedido"
    android:id="@+id/imFotododoador"
    android:background="@mipmap/bg_common">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_d.doador"
        android:id="@+id/textView1"
        android:layout_above="@+id/nome_doador"
        android:layout_alignLeft="@+id/nome_doador"
        android:layout_alignStart="@+id/nome_doador" />


    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nomedoador"
        android:id="@+id/nome_doador"
        android:layout_above="@+id/telefone_doador"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_telefonedodoador"
        android:id="@+id/telefone_doador"
        android:layout_above="@+id/btnColetaEfetuada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnColetaEfetudada"
        android:id="@+id/btnColetaEfetuada"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bt_map_coletar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/map2"
        android:layout_alignEnd="@+id/map2" />


</RelativeLayout>
