<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.v3.nrd.nrdv3.AvaliarDoador"
    android:id="@+id/imFotododoador"
    android:background="@mipmap/bg_common">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_doador_avalie"
        android:id="@+id/textView1"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/photo"
        android:layout_below="@+id/imageView6"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:numStars="5"
        android:rating="1"
        android:stepSize="1"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Avaliar Doador"
        android:id="@+id/btnOk1"
        android:layout_marginBottom="51dp"
        android:background="@mipmap/bt_map_coletar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nomedoador"
        android:id="@+id/textView10"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_marginTop="9dp" /><!--android:layout_alignLeft="@+id/textView1"-->
        <!--android:layout_alignStart="@+id/textView1" -->
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_telefonedodoador"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@mipmap/logo_common"
        android:layout_marginTop="83dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView12"
        android:layout_toStartOf="@+id/textView12" />
</RelativeLayout>
