<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.v3.nrd.nrdv3.ActResultado"
    android:id="@+id/imFotododoador"
    android:background="@mipmap/bg_common">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/photo"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="7dp"
        android:layout_alignRight="@+id/nome_coletor"
        android:layout_alignEnd="@+id/nome_coletor"
        android:layout_alignLeft="@+id/nome_coletor"
        android:layout_alignStart="@+id/nome_coletor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Estou a caminho!"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnColetaEfetudada"
        android:id="@+id/btnColetaEfetuada"
        android:layout_marginBottom="64dp"
        android:background="@mipmap/bt_map_doar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Dados do Coletor"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nomecoletor"
        android:id="@+id/nome_coletor"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_telefonedocoletor"
        android:id="@+id/telefone_coletor"
        android:layout_below="@+id/nome_coletor"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_marginTop="83dp"
        android:src="@mipmap/logo_common"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@mipmap/baloon"
        android:visibility="visible"
        android:layout_below="@+id/telefone_coletor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
